--- a/Task01/task1.html
+++ b/Task01/task1.html
@@ -17,17 +17,33 @@
     <main>
       <div>
         <table>
-          <tr style="background-color: #ffbf00;">
-            <td><img src="./img/image-kn.png" class="resizeimage"></td>
+          <tr class="tr_kintone">
+            <td>
+              <div>
+                <img src="./img/image-kn.png" class="resizeimage">
+              </div>
+            </td>
           </tr>
-          <tr style="background-color: #1992d4;">
-            <td><img src="./img/image-of.png" class="resizeimage"></td>
+          <tr class="tr_office">
+            <td>
+              <div>
+                <img src="./img/image-of.png" class="resizeimage">
+              </div>
+            </td>
           </tr>
-          <tr style="background-color: #003399;">
-            <td><img src="./img/image-gr.png" class="resizeimage"></td>
+          <tr class="tr_garoon">
+            <td>
+              <div>
+                <img src="./img/image-gr.png" class="resizeimage">
+              </div>
+            </td>
           </tr>
-          <tr style="background-color: #df4356;">
-            <td><img src="./img/image-mw.png" class="resizeimage"></td>
+          <tr class="tr_mailwise">
+            <td>
+              <div>
+                <img src="./img/image-mw.png" class="resizeimage">
+              </div>
+            </td>
           </tr>
         </table>
       </div>
