--- a/Task01/task1.html
+++ b/Task01/task1.html
@@ -15,37 +15,17 @@
       </div>
     </header>
     <main>
-      <div>
-        <table>
-          <tr class="tr_kintone">
-            <td>
-              <div>
-                <img src="./img/image-kn.png" class="resizeimage">
-              </div>
-            </td>
-          </tr>
-          <tr class="tr_office">
-            <td>
-              <div>
-                <img src="./img/image-of.png" class="resizeimage">
-              </div>
-            </td>
-          </tr>
-          <tr class="tr_garoon">
-            <td>
-              <div>
-                <img src="./img/image-gr.png" class="resizeimage">
-              </div>
-            </td>
-          </tr>
-          <tr class="tr_mailwise">
-            <td>
-              <div>
-                <img src="./img/image-mw.png" class="resizeimage">
-              </div>
-            </td>
-          </tr>
-        </table>
+      <div class="section_kintone">
+        <img src="./img/image-kn.png" class="product_image">
+      </div>
+      <div class="section_office">
+        <img src="./img/image-of.png" class="product_image">
+      </div>
+      <div class="section_garoon">
+        <img src="./img/image-gr.png" class="product_image">
+      </div>
+      <div class="section_mailwise">
+        <img src="./img/image-mw.png" class="product_image">
       </div>
     </main>
   </body>
