--- a/Task01/task1.html
+++ b/Task01/task1.html
@@ -15,16 +15,16 @@
       </div>
     </header>
     <main>
-      <div class="section_kintone">
+      <div class="section_position section_kintone">
         <img src="./img/image-kn.png" class="product_image">
       </div>
-      <div class="section_office">
+      <div class="section_position section_office">
         <img src="./img/image-of.png" class="product_image">
       </div>
-      <div class="section_garoon">
+      <div class="section_position section_garoon">
         <img src="./img/image-gr.png" class="product_image">
       </div>
-      <div class="section_mailwise">
+      <div class="section_position section_mailwise">
         <img src="./img/image-mw.png" class="product_image">
       </div>
     </main>
