--- a/Task04/task4-2.html
+++ b/Task04/task4-2.html
@@ -75,7 +75,7 @@ header h2 {
   const storageOptionPrice = chkArray[1].value; // ¥1000 per 10GB
 
   //btnのクリックで動作する
-  const calc = document.getElementById('btn').onclick = () => {
+  document.getElementById('btn').onclick = () => {
     let numOfUser = 0;
     let ammount = 0;
     //セキュアオプションのチェックボックスの状態の取得
